--- a/.eslintrc
+++ b/.eslintrc
@@ -18,12 +18,16 @@
     "no-console": "error",
     "no-undefined": "error",
     "no-unused-expressions": "error",
-    "no-unreachable": "error",
-    "consistent-type-definitions": ["error", "type"]
+    "no-unreachable": "error"
   },
 
   "env": {
     "browser": true,
-    "es2021": true
+    "es2021": true,
+    "node": true
+  },
+  
+  "globals": {
+    "process": "readonly"
   }
 }
