--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.2.2",
-    "winston": "^3.9.0"
+    "winston": "^3.9.0",
+    "zod": "^3.21.4"
   }
 }
