--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "http-status": "^1.6.2",
     "mongoose": "^7.2.2",
     "winston": "^3.9.0",
     "zod": "^3.21.4"
