--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
-node_modules
+# Ignore VS Code settings
+.vscode/
+
+# Ignore node_modules directory
+node_modules/
+
+# Ignore logs folder
+logs/
+
 .env
