--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "university-management-auth-service",
+  "name": "university-management-core-service",
   "version": "1.0.0",
   "description": "",
   "main": "src/server.ts",
@@ -34,11 +34,12 @@
     "winston-daily-rotate-file": "^4.7.1"
   },
   "dependencies": {
+    "@prisma/client": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-status": "^1.6.2",
-    "mongoose": "^7.2.2",
+    "prisma": "^5.1.1",
     "winston": "^3.9.0",
     "zod": "^3.21.4"
   }
