--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "src/**/*.ts": "yarn lint-prettier"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.2.5",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
@@ -35,10 +37,12 @@
   },
   "dependencies": {
     "@prisma/client": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-status": "^1.6.2",
+    "jsonwebtoken": "^9.0.1",
     "prisma": "^5.1.1",
     "winston": "^3.9.0",
     "zod": "^3.21.4"
