--- a/package.json
+++ b/package.json
@@ -36,14 +36,15 @@
     "winston-daily-rotate-file": "^4.7.1"
   },
   "dependencies": {
-    "@prisma/client": "^5.2.0",
+    "@prisma/client": "^5.3.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-status": "^1.6.2",
     "jsonwebtoken": "^9.0.1",
-    "prisma": "^5.2.0",
+    "prisma": "^5.3.1",
+    "redis": "^4.6.10",
     "winston": "^3.9.0",
     "zod": "^3.21.4"
   }
